--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
 name: 'Asana Github Issues Integration'
 description: 'Common integrations between Asana and Github'
 inputs:
+  action:
+    description: 'Action that will be executed. `create-task` to create a task based on the ISSUE'
+    required: true
   github-pat:
     description: 'Github Public Access Token.'
     required: true
@@ -8,14 +11,15 @@ inputs:
     description: 'Asana Public Access Token.'
     required: true
   asana-project:
-    description: 'Asana Project Id where the Tasks will be added.'
-    required: true
-  asana-custom-field:
-    description: 'Asana Project Custom Field ID that will be used to link the Issue URL.'
-    required: true
-  action:
-    description: 'Action that will be executed. `create-task` to create a task based on the ISSUE'
-    required: true
+    description: 'Asana Project Id where the Task will be added.'
+    required: false
+    asana-section:
+    description: 'The Section of the Project where the Task will be added to'
+    required: false
+  trigger-phrase:
+    description: 'Prefix used to identify Asana tasks (URL).'
+    required: false
+  
 branding:
   icon: 'chevron-right'
   color: 'gray-dark'
