updated readme and latest release

--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,12 @@ inputs:
   trigger-phrase:
     description: 'Prefix used to identify Asana tasks (URL).'
     required: false
+  github-repository:
+    description: 'Github Repository to check for the latest release.'
+    required: false
+  github-org:
+  description: 'Github Organisation where the repository is hosted, to check for the latest release.'
+  required: false
   
 branding:
   icon: 'chevron-right'
