--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,12 @@ inputs:
   asana-section:
     description: 'The Section of the Project where the Task will be added to'
     required: false
+  asana-task-name:
+    description: 'Name of the Asana task you want to create.'
+    required: false
+  asana-task-description:
+    description: 'Description of the Asana task you want to create.'
+    required: false
   trigger-phrase:
     description: 'Prefix used to identify Asana tasks (URL).'
     required: false
